E-commerce-project-springBoot-master/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-backend
  template:
    metadata:
      labels:
        app: springboot-backend
    spec:
      containers:
        - name: backend
          image: freshcart-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: springboot-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
