E-commerce-project-springBoot-master/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshcart-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          # Route all backend API requests to the backend service
          - path: /api/.*
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          # Route all other root requests to the frontend service
          - path: /.*
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
